--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@react-native-community/clipboard": "^1.5.1",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
     "react": "18.0.0",
     "react-native": "0.69.4",
     "react-native-inappbrowser-reborn": "^3.7.0",
+    "react-native-safe-area-context": "^4.3.3",
+    "react-native-screens": "^3.16.0",
     "react-native-webview": "^11.23.0"
   },
   "devDependencies": {
